# flyplot

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  pyproject.toml
Magno_Compare/: info.md  magno_compare.ipynb
Magno_Compare/.ipynb_checkpoints/: magno_compare-checkpoint.ipynb
Magno_LED_Loop/: info.md
Magno_LED_Loop/data/: 20231121124749.txt
Magno_LED_Static/: info.md
doc/: INSTALL.md  USER_GUIDE.md
docs/: FAQs.md  USER_GUIDE.md
fly_flip_fix/: fly_analysis.py  flyflip.ipynb  flyflip_dev-Copy1.ipynb  flyflip_dev.ipynb  info.md  revised_file.txt  test-flyflip.ipynb
fly_flip_fix/.ipynb_checkpoints/: flyflip-checkpoint.ipynb
flyplot/data/: __init__.py  info.md
flyplot/data/datasets/raw_data/: 20231228154547.txt
flyplot/fly_analysis/: __init__.py  fly_analysis.py  revised_file.txt
flyplot/parsing/: __init__.py  basic_sections.py  data_range.py  fly_wrap.py
flyplot/plotting/: __init__.py  flyviz.py
lib/parsing/: basic_sections.py  exact_exp_groups.py
lib/plotting/: flyviz.py  polarplot.py
notebooks/: flyflip_dev.ipynb
parsing/: basic_sections.py  data_range.py
plotting/: flyviz.py  polarplot.py
src/flyplot/: __init__.py  install.py  led_convert.py  project_setup.py
src/flyplot/data/: data_loader.py
src/flyplot/data/datasets/raw_data/: 20231222110617.txt
src/flyplot/fly_analysis/: compare.py  fly_analysis.py  flyflip.ipynb  revised_file.txt
src/flyplot/parsing/: exact_exp_groups.py  fly_wrap.py
src/flyplot/plotting/: flyviz.py  polarplot.py
tools/: install.py  install.sh  update.sh
